After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 659298 - log-window: improve icons in the search entry
log-window: improve icons in the search entry
Status: RESOLVED FIXED
Product: empathy
Classification: Core
Component: General
unspecified
Other All
: Normal normal
: ---
Assigned To: empathy-maint
empathy-maint
Depends on:
Blocks:
 
 
Reported: 2011-09-17 04:59 UTC by Cosimo Cecchi
Modified: 2011-09-19 19:11 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
log-window: improve icons in the search entry (2.65 KB, patch)
2011-09-17 05:00 UTC, Cosimo Cecchi
committed Details | Review

Description Cosimo Cecchi 2011-09-17 04:59:58 UTC
See rationale in the attached patch.
Comment 1 Cosimo Cecchi 2011-09-17 05:00:00 UTC
Created attachment 196787 [details] [review]
log-window: improve icons in the search entry

There are a few improvements we can make to the search entry icons in
the log window, which this patch tries to fix.
- icons in entries are usually symbolic in GNOME 3, so I made the icons
  symbolic.
- I merged the two icons in just one on the right using the shell-style,
  i.e. the search icon turns into a clear action once there's some text
  typed into the entry (Documents also uses the same style for its
  search entry).
Comment 2 Guillaume Desmottes 2011-09-19 09:25:08 UTC
Review of attachment 196787 [details] [review]:

Looks mostly good but we should ask an exception as that's an UI change.

::: libempathy-gtk/empathy-log-window.c
@@ +2030,3 @@
+  str = gtk_entry_get_text (GTK_ENTRY (self->priv->search_entry));
+
+  if ((str != NULL) && (str[0] != '\0'))

Use tp_str_empty().
Comment 3 Cosimo Cecchi 2011-09-19 19:11:21 UTC
Attachment 196787 [details] pushed as 0d24698 - log-window: improve icons in the search entry

Release and Doc teams gave their approvals, so I fixed the patch to use tp_str_empty() and pushed it to master.