log-window: improve icons in the search entry

There are a few improvements we can make to the search entry icons in
the log window, which this patch tries to fix.
- icons in entries are usually symbolic in GNOME 3, so I made the icons
  symbolic.
- I merged the two icons in just one on the right using the shell-style,
  i.e. the search icon turns into a clear action once there's some text
  typed into the entry (Documents also uses the same style for its
  search entry).

https://bugzilla.gnome.org/show_bug.cgi?id=659298